--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -4,6 +4,7 @@
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="me-3 py-5 text-dark text-decoration-none" href="/">Main</a>
             <a class="me-3 py-5 text-dark text-decoration-none" href="/blog">Blog</a>
+            <a class="me-3 py-5 text-dark text-decoration-none" href="/blog/add">Add post</a>
             <a class="py-2 text-dark text-decoration-none" href="/about">About</a>
         </nav>
     </div>
